# rust-mart-server

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/api/: Dockerfile
docker/db/: Dockerfile  init-db.sh
src/: main.rs
src/database/: mod.rs
src/error/: mod.rs
src/routes/: auth.rs
