[package]
name = "rust-mart-server"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1"
actix-session = "0.3"
actix-web = { version="2", features=["rust-tls"] }
http-auth-basic = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
rust-argon2 = "0.5"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }